--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
   }
   
   footer {
@@ -43,6 +43,7 @@ body {
     float: right;
   }
 
+
   .img-thumbnail{
     max-width: 100%;
     max-height: 175px;
@@ -58,11 +59,6 @@ body {
     flex-direction: row;
     align-items: flex-end;
   }
-  
-  .top-right-container button {
-    margin-top: 5px;
-  }
-  
   
   
   @media (max-height: 600px) {
