--- a/main.css
+++ b/main.css
@@ -3,6 +3,11 @@ body {
     flex-direction: column;
     min-width: 375px;
   }
+
+  html, body {
+    height: 100%;
+    margin: 0; /* Reset default margin */
+  }
   
   header {
     flex: 0 80px;
@@ -11,7 +16,7 @@ body {
   }
   
   main {
-    flex: 1 calc(100vh - 110px);
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,7 +58,7 @@ body {
 
   .top-right-container {
     position: fixed;
-    top: 200px;
+    top: 250px;
     right: 30px;
     display: flex;
     flex-direction: row;
