--- a/main.css
+++ b/main.css
@@ -4,19 +4,17 @@ body {
     min-width: 375px;
   }
 
-  html, body {
-    height: 100%;
-    margin: 0; /* Reset default margin */
+  .container-fluid {
+    max-width: 100%;
   }
+  
   
   header {
     flex: 0 80px;
-    padding:0%;
-    margin: 0px
   }
   
   main {
-    flex: 1;
+    flex: 1 calc(100vh - 110px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,7 +62,7 @@ body {
     flex-direction: row;
     align-items: flex-end;
   }
-  
+
   
   @media (max-height: 600px) {
     header {
@@ -77,4 +75,50 @@ body {
       flex: 1 100vh;
     }
   }
+
+/* Add this media query at the end of your existing CSS */
+@media (max-width: 600px) {
+  table {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .table th, .table td {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .table thead, .table tbody, .table th, .table td, .table tr {
+    display: block;
+  }
+
+  .table td:before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 0;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+  }
+
+  /* Label the data */
+  .table td:nth-of-type(1):before { content: 'Meal Title(Database Data)'; }
+  .table td:nth-of-type(2):before { content: 'Ingredients'; }
+  .table td:nth-of-type(3):before { content: 'Per Serving'; }
+  .table td:nth-of-type(4):before { content: 'Instructions'; }
+  .table td:nth-of-type(5):before { content: 'Reviews'; }
+  .table td:nth-of-type(6):before { content: 'Votes'; }
+  .table td:nth-of-type(7):before { content: 'UpVote'; }
+
+  /* Additional styling for images */
+  .table img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+
   
