--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body {
     max-width: 100%;
   }
   
+  
   header {
     flex: 0 80px;
   }
@@ -27,7 +28,6 @@ body {
   menu {
     flex: 1;
     display: flex;
-    /*  overwrite Bootstrap so the menu does not wrap */
     flex-direction: row !important;
     list-style: none;
   }
@@ -62,6 +62,30 @@ body {
     align-items: flex-end;
   }
 
+  #table-container {
+    width: 100%;
+    margin: 1em;
+    justify-content: center;
+  }
+
+  .meal-table{
+    padding: 20px;
+  }
+
+  .meal-table tr{
+    padding: 20px;
+  }
+
+  .link-row{
+    padding-bottom: 30px;
+  }
+
+  .body-container{
+    width: 100%;
+    margin: 2em;
+    justify-content: center;
+  }
+
   
   @media (max-height: 600px) {
     header {
@@ -75,17 +99,24 @@ body {
     }
   }
 
-/* Add this media query at the end of your existing CSS */
 @media (max-width: 600px) {
   .meal-table {
     width: 100%;
     margin-bottom: 20px;
   }
 
+  .meal-table th, .meal-table td {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .meal-table thead, .meal-table tbody, .meal-table th, .meal-table td, .meal-table tr {
+    display: block;
+  }
+
   .meal-table td:before {
-    /* Now like a table header */
     position: absolute;
-    /* Top/left values mimic padding */
     top: 0;
     left: 6px;
     width: 45%;
@@ -93,14 +124,18 @@ body {
     white-space: nowrap;
   }
 
+  .table td:nth-of-type(1):before { content: 'Meal Title(Database Data)'; }
+  .table td:nth-of-type(2):before { content: 'Ingredients'; }
+  .table td:nth-of-type(3):before { content: 'Per Serving'; }
+  .table td:nth-of-type(4):before { content: 'Instructions'; }
+  .table td:nth-of-type(5):before { content: 'Reviews'; }
+  .table td:nth-of-type(6):before { content: 'Votes'; }
+  .table td:nth-of-type(7):before { content: 'UpVote'; }
+
   .meal-table img {
     max-width: 100%;
     height: auto;
   }
-
-  .meal-title {
-    font-size: 1.5em;
-    font-weight: bold;}
 
   #table-container {
     display: flex;  
